# APRIS-mvp

./: .gitignore  .importlinter  .pre-commit-config.yaml  CHANGELOG_REVIEW_UPDATES.md  CHEOPS_AI_DEVELOPMENT_PLAN.md  LICENSE  README.md  app.py  data_generator.py  fix_app.py  graph_module.py  open_app.bat  population_map.py  pyproject.toml  requirements.txt  risk_engine.py  start_app.bat  stop_app.bat  stop_app.ps1  tests_smoke.py  train_model.py
.github/workflows/: ci.yml
.streamlit/: config.toml
artifacts/: feature_importances.json  feature_names.json  feature_schema.json  metrics.json  synthetic_dataset.csv
crypto_ponzi/: aggregator.py  tx_generator.py
docs/: MANUAL_REVIEW_CHECKLIST.md  RELEASE_CHECKLIST.md
mlruns/1/df465b237fed426a8bbe54eb28dff458/artifacts/: feature_importances.json  metrics.json  model.joblib
pages/: 1_Дашборд_аномалий.py  2_Сканнер_транзакций.py  3_Ручная_проверка.py
scripts/: app.ps1
src/apris/: data_generator.py  etl.py  graph_module.py  risk_engine.py  train_model.py
src/apris/api/: main.py
src/apris/cheops/: __init__.py
src/apris/cheops/application/: __init__.py  dto.py  use_cases.py
src/apris/cheops/domain/: __init__.py  contracts.py  models.py  typologies.py
src/apris/cheops/infrastructure/: __init__.py
src/apris/crypto_ponzi/: __init__.py  explainer.py  risk_scorer.py  visualizations.py
src/apris/frontend/: api_client.py
src/apris/frontend/assets/: hero.html  (+1 more)
tests/: conftest.py
tests/api/: test_api_endpoints.py  test_api_v2_endpoints.py
tests/smoke/: test_e2e_smoke.py
tests/unit/: test_cheops_contracts.py  test_cheops_engine.py  test_etl.py  test_frontend_api_client.py  test_risk_engine.py  test_scanner_architecture.py
(+8 files in other folders)
