[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apris"
version = "1.0.0"
description = "Cheops AI - Multi-Channel Fraud Intelligence System"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "streamlit>=1.42",
    "scikit-learn>=1.3",
    "pandas>=2.1",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "networkx>=3.2",
    "joblib>=1.3",
    "requests>=2.31",
    "lightgbm>=4.0",
    "mlflow>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=5.0",
    "httpx>=0.25",
    "ruff>=0.1",
    "mypy>=1.8",
    "pre-commit>=3.6",
    "types-requests>=2.31",
    "import-linter>=2.0",
    "bandit>=1.7",
    "radon>=6.0",
    "diff-cover>=9.0",
    "chardet<6",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "smoke: end-to-end smoke tests",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src/apris", "tests", "pages"]
exclude = [".venv", ".venv_*", "artifacts", "mlruns"]

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]

[tool.mypy]
python_version = "3.10"
files = ["src/apris"]
exclude = "(src/apris/crypto_ponzi/|src/apris/graph_module.py)"
ignore_missing_imports = true
warn_unused_configs = true
pretty = true

[tool.coverage.run]
source = ["src/apris"]
branch = true
omit = [
    "src/apris/crypto_ponzi/*",
    "src/apris/graph_module.py",
    "src/apris/population_map.py",
]

[tool.coverage.report]
fail_under = 75
skip_empty = true

